fix gap

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -71,6 +71,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   width: 100%;
 }
 
+
+.note-cards {
+  width: 100%;
+  height: 100%;
+}
+
 mat-divider {
   padding: 10px;
 }
